--- a/client/src/styles/Artist.scss
+++ b/client/src/styles/Artist.scss
@@ -10,16 +10,26 @@
 
   label {
     display: flex;
-    height: 46px;
     align-items: center;
+    justify-content: space-between;
     background: $color-card;
     margin: 16px 0;
     border-radius: 4px;
-    padding: 16px;
+    padding: 8px;
+  }
+
+  span {
+    display: flex;
   }
 
   input {
     margin-right: 16px;
+  }
+
+  img {
+    height: 80px;
+    width: 80px;
+    border-radius: 4px;
   }
 }
 
