--- a/client/src/styles/Artist.scss
+++ b/client/src/styles/Artist.scss
@@ -2,11 +2,37 @@
 
 
 #artist {
-  button {
-    margin-bottom: 32px;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding-top: 108px;
+
+  header {
+    position: fixed;
+    top: 0;
+    max-width: 450px;
+    width: 100%;
+  }
+
+  .album-list {
+    padding-bottom: 80px;
+    flex-grow: 1;
   }
 }
+
+.artist-button {
+  margin-bottom: 16px;
+  position: fixed;
+  bottom: 16px;
+  max-width: 418px;
+  width: 100%;
+
+  button {
+    cursor: pointer;
+    box-shadow: black 0px 6px 20px 4px;
+  }
+}
+
 #album {
 
   label {
@@ -40,7 +66,9 @@
 }
 
 #confirmation {
-  a.button {
-    margin-top: 200px;
+  a {
+    text-decoration: underline;
+    word-wrap: break-word;
   }
+
 }
