--- a/client/src/styles/Artist.scss
+++ b/client/src/styles/Artist.scss
@@ -5,13 +5,22 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding-top: 108px;
+  padding-top: 116px;
 
   header {
     position: fixed;
     top: 0;
     max-width: 450px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    > div {
+      margin-left: 16px;
+    }
+
   }
 
   .album-list {
@@ -30,6 +39,16 @@
   button {
     cursor: pointer;
     box-shadow: black 0px 6px 20px 4px;
+  }
+}
+
+.master-checkbox {
+  color: $color-text-grey;
+  margin-top: 16px;
+  
+  input {
+    margin-left: 12px;
+    margin-right: 16px;
   }
 }
 
@@ -61,14 +80,33 @@
   img {
     height: 80px;
     width: 80px;
-    border-radius: 4px;
+  }
+
+  .unselectedAlbum {
+    color: $color-text-grey;
   }
 }
 
 #confirmation {
   a {
-    text-decoration: underline;
     word-wrap: break-word;
   }
 
+}
+
+.spotifyLogo {
+  width: 80px;
+  margin-right: 16px;
+  margin-left: 8px;
+  display: block;
+  align-self: flex-end;
+}
+
+.spotify-button {
+  margin-bottom: 16px;
+
+  a.button {
+    background: none;
+    border: 1px $color-green solid;
+  }
 }
