--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -60,7 +60,7 @@ header {
   min-height: 100px;
   display: flex;
   align-items: flex-end;
-  padding-bottom: 8px;
+  padding: 8px 0;
   margin-bottom: 8px;
 }
 
