--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -55,12 +55,16 @@ p {
 }
 
 header {
-  background: black;
+  // background: black;
+  background: linear-gradient(#222222, $color-background-black);
   height: 100px;
   min-height: 100px;
+  top: 0;
+  max-width: 450px;
+  width: 100%;
   display: flex;
   align-items: flex-end;
-  padding: 8px 0;
+  padding: 16px 0;
   margin-bottom: 8px;
 }
 
