--- a/client/src/styles/Artist.scss
+++ b/client/src/styles/Artist.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding-top: 132px;
+  padding-top: 182px;
 
   header {
     display: flex;
@@ -13,7 +13,8 @@
     justify-content: space-between;
     align-items: flex-start;
     position: fixed;
-    padding-left: 16px;
+    padding: 16px;
+    box-sizing: border-box;
 
     button {
       width: 32px;
@@ -42,6 +43,16 @@
     cursor: pointer;
     box-shadow: rgba(0,0,0,0.5) 0px 6px 20px 4px;
   }
+}
+
+.artist-image {
+  height: 150%;
+  width: 100%;
+  background-size: cover !important;
+  position: absolute;
+  top: -50%;
+  left: 0;
+  z-index: -1;
 }
 
 .master-checkbox {
