--- a/client/src/styles/Artist.scss
+++ b/client/src/styles/Artist.scss
@@ -31,6 +31,23 @@
     padding-bottom: 80px;
     flex-grow: 1;
   }
+
+  .button {
+    margin: 8px 0;
+    border: 2px solid $color-green;
+    background: $color-card;
+
+    &:hover {
+      background: $color-card-light;
+    }
+
+    img {
+      height: 24px;
+      width: 24px;
+      margin-right: 8px;
+    }
+
+  }
 }
 
 .artist-button {
@@ -66,20 +83,20 @@
 }
 
 .album {
+  margin: 16px 0;
+  background: $color-card;
+  border-radius: 4px;
 
   label {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: $color-card;
-    margin: 16px 0;
-    border-radius: 4px;
     padding: 8px;
     cursor: pointer;
+  }
 
-    &:hover {
-      background: $color-card-light;
-    }
+  &:hover {
+    background: $color-card-light;
   }
 
   span {
@@ -99,6 +116,30 @@
   .unselectedAlbum {
     color: $color-text-grey;
   }
+
+  // .link {
+  //   text-align: right;
+  //   padding: 8px;
+  //   padding-top: 0;
+  //   font-size: 12px;
+  //   letter-spacing: 2px;
+  //
+  //   img {
+  //     height: 16px;
+  //     width: 16px;
+  //     margin-right: 8px;
+  //     display: inline-block;
+  //     margin-bottom: -4px;
+  //   }
+  //
+  //   a {
+  //     color: $color-text-grey;
+  //
+  //     &:hover {
+  //       color: $color-green;
+  //     }
+  //   }
+  // }
 }
 
 #confirmation {
