--- a/client/src/styles/Artist.scss
+++ b/client/src/styles/Artist.scss
@@ -34,7 +34,7 @@
 
   .button {
     margin: 8px 0;
-    border: 2px solid $color-green;
+    border: 2px solid $color-text-grey;
     background: $color-card;
 
     &:hover {
